--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_InvoiceMainPage.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_InvoiceMainPage.cshtml
@@ -6,7 +6,7 @@
 }
 else if (Model.isFinalize == false)
 {
-    <div class=" my-3 fs-3 fw-bold text-center">Time Sheet Has not finalized.......</div>
+    <div class=" py-3 fs-3 fw-bold text-center white-bag">Time Sheet Has not finalized.......</div>
     <input class="FinalizeValue"  value="false" hidden/>
 }
 else
