--- a/HelloDoc/Views/AdminDash/AdminInvoice.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminInvoice.cshtml
@@ -12,7 +12,7 @@
 
     <div class="container w-75  white-bag shadow pt-3 pb-3 ">
         <div class="d-flex w-50">
-            <select class="form-select mx-2 py-3" id="PhysicianId" aria-label="Default select example">
+            <select class="form-select mx-2 py-3" id="PhysicianId" onchange="ChangeDate()" aria-label="Default select example">
                 <option value="0">Search By Physician</option>
                 @foreach (var item in ViewBag.Physicians)
                 {
@@ -51,14 +51,20 @@
     <div class="container px-0  w-75" id="timssheetdata">
 
     </div> 
-    <div class="container  px-0 w-75" id="reimbursement">
+    <div class="container  px-0 w-75" id="ApprovalSheet">
 
     </div>
 </div>
 
 <script>
+
+    function ChangeDate() { 
+        const select = document.getElementById("selectedDate");
+        select.selectedIndex = 0;
+
+    }
     function Load() { 
-        debugger
+        
         var PhysicianId = $("#PhysicianId").val();
         var date = $("#selectedDate").val();
 
@@ -69,12 +75,12 @@
                 $.ajax({
 
                     type :'GET',
-                    url: '/AdminDash/GetTimeSheetData',
+                    url: '/AdminDash/GetReimbursementData',
                     data: { PhysicianId: PhysicianId, date: date },
                     success: function (response) {
 
-                        LoadReimbursement();
                         $("#timssheetdata").html(response);
+
                     }
 
                 });
@@ -93,22 +99,5 @@
 
   
 
-    function LoadReimbursement() {
-        var date = $("#selectedDate").val();
-        var PhysicianId = $("#PhysicianId").val();
-        if (date != "0") {
-            $.ajax({
-                type: 'GET',
-                url: '/AdminDash/GetReimbursementData',
-                data: { date: date, PhysicianId: PhysicianId },
-                success: function (response) {
-                    
-                    $("#reimbursement").html(response);
-                },
-                error: function (response) {
-                    alert("LoadReimbursement");
-                }
-            });
-        }
-    }
+    
 </script>
