--- a/HelloDoc/Views/AdminDash/_TimeSheetMainView.cshtml
+++ b/HelloDoc/Views/AdminDash/_TimeSheetMainView.cshtml
@@ -1,13 +1,13 @@
 ﻿@model DAL.ViewModel.TimeSheetMainModel
 
-@if (Model.isFinalize)
+@if (!Model.isFinalize)
 {
-    <div class="py-3 fs-4 ps-4 white-bag">No Record(s) Found</div>
+    <div class="py-3 fs-4 ps-4 white-bag">@Model.physicianName has not finalized the timesheet in spacified time period</div>
 }
 
 else
 {
-    @if(Model.isApproved)
+    @if(!Model.isApproved)
     {
         
             <table class="d-none d-md-table table white-bag" style="margin-bottom: 0 !important;">
@@ -25,7 +25,7 @@ else
                             <td scope="col" class="ps-3">@Model.startdate</td>
                             <td scope="col" class="ps-3">@Model.enddate</td>
                             <td scope="col" class="ps-3">Pending</td>
-                            <td scope="col" class="ps-3"><button class="btn btn-outline-info">Approve</button></td>
+                            <td scope="col" class="ps-3"><button class="btn btn-outline-info" onclick="LoadSubmitSheet()">Approve</button></td>
                            
                         </tr>
                 </tbody>
@@ -70,7 +70,7 @@ else
         </div>
 
 
-        <div>
+        <div class="mt-4">
             <div class="white-bag" style="height:60px !important">
                 <h4 class="white-bag pt-3 ps-3">TimeSheet Reimbursement</h4>
             </div>
@@ -104,3 +104,25 @@ else
 
 }
 
+<script>
+
+    function LoadSubmitSheet() {
+
+        var PhysicianId = $("#PhysicianId").val();
+        var date = $("#selectedDate").val();
+
+        $.ajax({
+
+            type: 'GET',
+            url: '/AdminDash/GetApprovalSheetData',
+            data: { PhysicianId: PhysicianId, date: date },
+            success: function (response) {
+
+                $("#ApprovalSheet").html(response);
+                $("#timssheetdata").hide();
+
+            }
+
+        });
+    }
+</script>
