--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -3,6 +3,7 @@
     var requestor = "";
 }
 
+    <partial name="_Chat"></partial>
 <table class="table text-center table-responsive-lg" id="table">
 
     <thead class="table-secondary">
@@ -16,11 +17,11 @@
             <th scope="col">Phone</th>
             <th scope="col">Address</th>
             <th scope="col">Notes</th>
+            <th scope="col">Chat</th>
          
             <th scope="col">Action</th>
         </tr>
     </thead>
-
   <tbody class="fs-5">
         @foreach (var item in Model)
         {
@@ -111,7 +112,22 @@
                 </td>
                 <td class="my-auto">@item.Address</td>
                 <td class="my-auto">@item.Notes</td>
-               
+                <td class="my-auto">
+                    <div class="d-flex">
+                        <button type="button" class="btn border rounded text-white me-2 d-flex" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill me-2" viewBox="0 0 16 16">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+                            </svg>
+                            Patient
+                        </button>
+                        <button type="button" class="btn border rounded text-white d-flex" data-bs-toggle="offcanvas" id="offcanvasRight" data-bs-physician-id="10" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill me-2" viewBox="0 0 16 16">
+                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
+                            </svg>
+                            Provider
+                        </button>
+                    </div>
+                </td>
                 <td class="my-auto text-white">
                     <button type="button" class="btn border border-2 text-white rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Action
@@ -180,9 +196,9 @@
 </table>
 
 
+
 @* ---------------------------------------------------------- *@
 @*Accordion*@
-
 
 <div class="accordion mx-2 pb-3" id="accordionExample">
     @{
@@ -441,3 +457,6 @@
 
 
 </script>
+
+
+
