--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableNew.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableNew.cshtml
@@ -2,7 +2,7 @@
     var color = "";
     var requestor = "";
 }
-
+<partial name="_Chat"></partial>
 <table class="table text-center table-responsive-lg" id="table">
 
     <thead class="table-secondary">
@@ -12,6 +12,7 @@
            
             <th scope="col">Phone</th>
             <th scope="col">Address</th>
+            <th scope="col">Chat</th>
          
           
             <th scope="col">Action</th>
@@ -96,8 +97,23 @@
 
                 </td>
                 <td class="my-auto">@item.Address</td>
-            
-             
+
+                <td class="my-auto">
+                    <div class="d-flex">
+                        <button type="button" class="btn border rounded text-white me-2 d-flex" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill me-2" viewBox="0 0 16 16">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+                            </svg>
+                            Patient
+                        </button>
+                        <button type="button" class="btn border rounded text-white d-flex" data-bs-toggle="offcanvas" id="offcanvasRight" data-bs-physician-id="1" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill me-2" viewBox="0 0 16 16">
+                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
+                            </svg>
+                            Provider
+                        </button>
+                    </div>
+                </td>
                 <td class="my-auto text-white">
                     <button type="button" class="btn border border-2 text-white rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Action
